setting about text

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
             <!-- <div class="abt"> -->
             <div class="text">
-                Connected with the Web development and Information Technology for many years. Well-organized person, problem-solver, person of Integrity and Loyalty. While working, I tend to put my expertencies at a high level. My free time hobbies are learning new IT
-                Stuff, Workout, Reading and Meditating. Student at UBO in France & in exchange in Sweden. Interested in the entire Frontend software Development spectrum and working on ambitious projects with positive people
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus excepturi dicta quod, aspernatur consectetur, est ullam nobis doloremque similique debitis perspiciatis officia odit molestias nulla fuga cupiditate officiis libero inventore! Lorem
+                ipsum dolor sit amet, consectetur adipisicing elit. Eveniet veritatis saepe, obcaecati vero qui in numquam sed aperiam iure blanditiis iusto quis ea nulla magni quo nostrum quasi tempora officia!
                 <br>
                 <button id="#"><a class="cv" target="_blank" href="/assets/Documents/Irakoze Eddy Nobel.pdf">Download My CV</a></button>
                 <br>
@@ -178,7 +178,7 @@
                 <div>
                     <p>Tel: +257 69291695 /+257 71854000</p>
                     <p>Email: <a class="mail" href="mailto:irano7260@gmail.com">irano7260@gmail.com</a></p>
-                    <p>=--------------------------------------------------------=</p>
+                    <p>=----------------------------=</p>
                 </div>
             </div>
 
