--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <nav>
-            <h1 class="logo">Irakoze Eddy Nobel</h1>
+            <h1 class="logo">Ace1</h1>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#About">About</a></li>
@@ -59,7 +59,8 @@
 
     <!-- about -->
     <section id="About">
-        <h1>About <span class="span">Me</span></h1>
+        <!-- <h1>About <span class="span">Me</span></h1> -->
+        <h1 id="never" class="ace">About <span class="span">Me</span></h1>
         <div>
             <img src="./assets/images/photo2.jpg" alt="Photo" width="500px" />
 
@@ -85,7 +86,8 @@
 
     <!-- Skills -->
     <section id="Skills">
-        <h1>languages and frameworks i know</h1>
+        <h1 id="never" class="ace">languages and frameworks <span class="span">i know</span></h1>
+
         <div class="container">
             <div class="item">Html</div>
             <div class="item">Css</div>
@@ -101,7 +103,8 @@
     </section>
     <!-- projects -->
     <section id="Projects">
-        <h1>Projects</h1>
+        <h1 id="never" class="ace">Projects</h1>
+
         <div class="button">
             <button>Html</button>
             <button>Css</button>
@@ -169,7 +172,9 @@
     </section>
     <!-- contact -->
     <section id="contact">
-        <h1 class="title">Contact</h1>
+
+        <h1 id="never" class="ace title">Contact <span class="span">Me</span></h1>
+
         <div class="formulaire">
             <div class="text">
                 <p>
