--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <!-- Skills -->
     <section id="Skills">
-        <h1 id="never" class="ace">languages and frameworks <span class="span">i know</span></h1>
+        <h1 id="never" class="ace skills">languages and frameworks <span class="span">i know</span></h1>
 
         <div class="container">
             <div class="item">Html</div>
@@ -103,7 +103,7 @@
     </section>
     <!-- projects -->
     <section id="Projects">
-        <h1 id="never" class="ace">Projects</h1>
+        <h1 id="never" class="ace projects">Projects</h1>
 
         <div class="button">
             <button>Html</button>
