integration formSubmit and some styling

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="#About">About</a></li>
                 <li><a href="#Skills">Skills</a></li>
                 <li><a href="#Projects">Projects</a></li>
+                <li><a href="#">Team</a></li>
                 <li> <a href="#contact">Contact </a></li>
 
                 <li> <a href="#" class="dark"><i class="fa-solid fa-moon"></i></a>
@@ -45,8 +46,9 @@
             <h1 class="salutation"><span class="span">Hi</span>✋, i am Eddy Nobel</h1>
             <br><br>
             <p class="intro">I am Java and Web developper</p><br/>
-            <p class="text">Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sed rerum maiores veniam eligendi, laboriosam itaque inventore quasi doloribus suscipit sint maxime voluptatem, cum, magni autem mollitia
-                neque ducimus aperiam? adipisicing elit. as , commodi rerum!</p>
+            <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic voluptatem asperiores molestias aliquid laboriosam, ullam tempora praesentium exercitationem vel eligendi consequatur maiores cupiditate laborum dicta facere quisquam esse officia corrupti?
+            </p>
             <a href="#contact"><button>Contact</button></a>
 
 
@@ -66,8 +68,7 @@
 
             <!-- <div class="abt"> -->
             <div class="text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus excepturi dicta quod, aspernatur consectetur, est ullam nobis doloremque similique debitis perspiciatis officia odit molestias nulla fuga cupiditate officiis libero inventore! Lorem
-                ipsum dolor sit amet, consectetur adipisicing elit. Eveniet veritatis saepe, obcaecati vero qui in numquam sed aperiam iure blanditiis iusto quis ea nulla magni quo nostrum quasi tempora officia!
+                Hello Guys! My name is ACE1. I am following my passion for Programing. I am from Burundi, I love gaming and like to entertain people. If you want to know more about me then please do follow on Instagram,facebook..... Hope you enjoy my content! }
                 <br>
                 <button id="#"><a class="cv" target="_blank" href="/assets/Documents/Irakoze Eddy Nobel.pdf">Download My CV</a></button>
                 <br>
@@ -181,19 +182,23 @@
                     I am interested in freelance opportunities, ambitious or large projects. However, if you have other request or question, don't hesitate to contact me using below form either. </p>
                 <br><br>
                 <div>
-                    <p>Tel: +257 69291695 /+257 71854000</p>
-                    <p>Email: <a class="mail" href="mailto:irano7260@gmail.com">irano7260@gmail.com</a></p>
-                    <p>=----------------------------=</p>
+
+                    <p>Tel :<a href="tel:+25769291695" class="btn btn-black f-right">+257 69 291 695</a></p>
+                    <p>Email : <a class="mail" href="mailto:irano7260@gmail.com">irano7260@gmail.com</a></p>
+                    <p>-------------------------------</p>
                 </div>
             </div>
 
-            <form action="" name="formule">
+            <form action="https://formsubmit.co/a6e145ed7d1caa5682bc801831857062" method="POST" name="formule">
 
                 <input type="text" placeholder="First name" class="id">
                 <input type="text" placeholder="Last Name">
                 <input type="Email" placeholder="E mail">
-                <textarea name="text" id="" cols="30" rows="10" placeholder="message">
-                </textarea>
+
+
+                <textarea id="w3review" name="w3review" rows="4" cols="50">
+    At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.
+    </textarea>
                 <input type="submit" value="Send">
         </div>
         </div>
@@ -201,7 +206,11 @@
     </section>
 
     <footer>
-        <p>Made by Ace1</p>
+
+        <p>Copyright &copy;
+            <script>
+                document.write(new Date().getFullYear())
+            </script> Ace1 All Rights Reserved</p>
     </footer>
 </body>
 
