--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#About">About</a></li>
                 <li><a href="#Skills">Skills</a></li>
                 <li><a href="#Projects">Projects</a></li>
-                <li><a href="#">Team</a></li>
+                <!-- <li><a href="#">Team</a></li> -->
                 <li> <a href="#contact">Contact </a></li>
 
                 <li> <a href="#" class="dark"><i class="fa-solid fa-moon"></i></a>
@@ -47,7 +47,7 @@
             <br><br>
             <p class="intro">I am Java and Web developper</p><br/>
             <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic voluptatem asperiores molestias aliquid laboriosam, ullam tempora praesentium exercitationem vel eligendi consequatur maiores cupiditate laborum dicta facere quisquam esse officia corrupti?
+                My programmer's name is ACE1 I like the dark side of the internet and everything that goes with privacy and anonymity.
             </p>
             <a href="#contact"><button>Contact</button></a>
 
@@ -68,7 +68,7 @@
 
             <!-- <div class="abt"> -->
             <div class="text">
-                Hello Guys! My name is ACE1. I am following my passion for Programing. I am from Burundi, I love gaming and like to entertain people. If you want to know more about me then please do follow on Instagram,facebook..... Hope you enjoy my content! }
+                I am following my passion for Programing. I am from Burundi, I love gaming and like to entertain people. If you want to know more about me then please do follow on Instagram,facebook..... Hope you enjoy my content! }
                 <br>
                 <button id="#"><a class="cv" target="_blank" href="/assets/Documents/Irakoze Eddy Nobel.pdf">Download My CV</a></button>
                 <br>
