changing grayscale and lnkd socl mda

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 <body>
     <header>
         <nav>
-            <h1 class="logo">Ace1</h1>
+            <h1 class="logo">Ace1.</h1>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#About">About</a></li>
                 <li><a href="#Skills">Skills</a></li>
                 <li><a href="#Projects">Projects</a></li>
-                <!-- <li><a href="#">Team</a></li> -->
+                <li><a href="https://kubwacu.com/about_us.html" target="_blank">Team</a></li>
                 <li> <a href="#contact">Contact </a></li>
 
                 <li> <a href="#" class="dark"><i class="fa-solid fa-moon"></i></a>
@@ -49,7 +49,7 @@
             <p class="text">
                 My programmer's name is ACE1 I like the dark side of the internet and everything that goes with privacy and anonymity.
             </p>
-            <a href="#contact"><button>Contact</button></a>
+            <a href="#contact"><button class="btn">Contact</button></a>
 
 
         </div>
@@ -73,10 +73,10 @@
                 <button id="#"><a class="cv" target="_blank" href="/assets/Documents/Irakoze Eddy Nobel.pdf">Download My CV</a></button>
                 <br>
                 <div class="social">
-                    <span> <a href="#">facebook</a></span>
-                    <span><a href="#">Twitter</a></span>
-                    <span><a href="#">Instagram</a></span>
-                    <span> <a href="#">Github</a></span>
+                    <span> <a href="#">Linkedin</a></span>
+                    <span><a href="https://twitter.com/nobel_eddy">Twitter</a></span>
+                    <span><a href="https://www.instagram.com/edd_nob/">Instagram</a></span>
+                    <span> <a href="https://github.com/ace7260">Github</a></span>
                 </div>
             </div>
             <!-- </div> -->
@@ -191,12 +191,12 @@
 
             <form action="https://formsubmit.co/a6e145ed7d1caa5682bc801831857062" method="POST" name="formule">
 
-                <input type="text" placeholder="First name" class="id">
-                <input type="text" placeholder="Last Name">
-                <input type="Email" placeholder="E mail">
+                <input type="text" placeholder="First name" class="id" required>
+                <input type="text" placeholder="Last Name" required>
+                <input type="Email" placeholder="E mail" required>
 
 
-                <textarea id="w3review" name="w3review" rows="1" cols="50">
+                <textarea id="w3review" name="w3review">
     
     </textarea>
                 <input type="submit" value="Send">
