--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!--add fontawesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
     <title>Irakoze Eddy Nobel | Ace1</title>
 </head>
 
@@ -30,9 +33,8 @@
                 <li> <a href="#contact">Contact </a></li>
 
                 <li> <a href="#" class="dark"><i class="fa-solid fa-moon"></i></a>
-                    <!-- <i class="fa-light fa-moon"> -->
-                </li>
-                <li> <a href="#" class="donate">Donate</a> </li>
+
+                    <li> <a href="#" class="donate">Donate</a> </li>
             </ul>
             <img class="close" src="./assets/images/close.png" alt="">
             <!-- <img class="hamburger" src="./assets/images/hamburger_icon.png" height="20px" alt=""> -->
@@ -46,6 +48,16 @@
             <h1 class="salutation"><span class="span">Hi</span>✋, i am Eddy Nobel</h1>
             <br><br>
             <p class="intro">I am Java and Web developper</p><br/>
+            <!-- <div class="wrapper">
+                <div class="static-txt">I'm a</div>
+                <ul class="dynamic-txts">
+                    <li class="ln"><span>Ace1</span></li>
+                    <li class="ln"><span>Designer</span></li>
+                    <li class="ln"><span>Developer</span></li>
+                    <li class="ln"><span>InFluencer</span></li>
+                </ul>
+            </div> -->
+
             <p class="text">
                 My programmer's name is ACE1 I like the dark side of the internet and everything that goes with privacy and anonymity.
             </p>
@@ -191,14 +203,15 @@
 
             <form action="https://formsubmit.co/a6e145ed7d1caa5682bc801831857062" method="POST" name="formule">
 
-                <input type="text" placeholder="First name" class="id" required>
-                <input type="text" placeholder="Last Name" required>
-                <input type="Email" placeholder="E mail" required>
+                <input type="text" placeholder="Irakoze Eddy Nobel" class="id" required>
+                <input type="text" placeholder="Object" required>
+                <input type="Email" placeholder="ace1@gmail.com" required>
+
+                <textarea name="" id="" cols="3" rows="10">
+                            
+                </textarea>
 
 
-                <textarea id="w3review" name="w3review">
-    
-    </textarea>
                 <input type="submit" value="Send">
         </div>
         </div>
@@ -212,6 +225,7 @@
                 document.write(new Date().getFullYear())
             </script> Ace1 All Rights Reserved</p>
     </footer>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
