some modification to dark_mode btn in js file

--- a/index.html
+++ b/index.html
@@ -200,17 +200,13 @@
                     <p>-------------------------------</p>
                 </div>
             </div>
-
             <form action="https://formsubmit.co/a6e145ed7d1caa5682bc801831857062" method="POST" name="formule">
 
                 <input type="text" placeholder="Irakoze Eddy Nobel" class="id" required>
                 <input type="text" placeholder="Object" required>
                 <input type="Email" placeholder="ace1@gmail.com" required>
 
-                <textarea name="" id="" cols="3" rows="10">
-                            
-                </textarea>
-
+                <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
 
                 <input type="submit" value="Send">
         </div>
