adjusting some style ui

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="content">
 
 <head>
     <meta charset="UTF-8" />
@@ -34,7 +34,7 @@
 
                 <li> <a href="#" class="dark"><i class="fa-solid fa-moon"></i></a>
 
-                    <li> <a href="#" class="donate">Donate</a> </li>
+                    <li> <a href="#" class="donate dark">Donate</a> </li>
             </ul>
             <img class="close" src="./assets/images/close.png" alt="">
             <!-- <img class="hamburger" src="./assets/images/hamburger_icon.png" height="20px" alt=""> -->
