--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
     <title>Irakoze Eddy Nobel | Ace1</title>
 </head>
 
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+    (function() {
+        var s1 = document.createElement("script"),
+            s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/6345a27c54f06e12d8999e96/1gf405e9c';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+    })();
+</script>
+<!--End of Tawk.to Script-->
+
 <body>
     <header>
         <nav>
@@ -226,6 +242,21 @@
             </script> Ace1 All Rights Reserved</p>
     </footer>
     <script src="/js/script.js"></script>
+</body>
+
+</html>
+</div>
+
+</section>
+
+<footer>
+
+    <p>Copyright &copy;
+        <script>
+            document.write(new Date().getFullYear())
+        </script> Ace1 All Rights Reserved</p>
+</footer>
+<script src="/js/script.js"></script>
 </body>
 
 </html>
