--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="text">
                 I am following my passion for Programing. I am from Burundi, I love gaming and like to entertain people. If you want to know more about me then please do follow on Instagram,facebook..... Hope you enjoy my content! }
                 <br>
-                <button id="#"><a class="cv" target="_blank" href="/assets/Documents/Irakoze Eddy Nobel.pdf">Download My CV</a></button>
+                <button id="#"><a class="cv" target="_blank" href="https://flowcv.com/resume/u10swdib7l">View My CV</a></button>
                 <br>
                 <div class="social">
                     <span> <a href="#">Linkedin</a></span>
