--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 
                     <p>Tel :<a href="tel:+25769291695" class="btn btn-black f-right">+257 69 291 695</a></p>
                     <p>Email : <a class="mail" href="mailto:irano7260@gmail.com">irano7260@gmail.com</a></p>
+                    <p>Whatsapp : <a class="mail" href="https://wa.me/c/25769291695">Wa.me</a></p>
                     <p>-------------------------------</p>
                 </div>
             </div>
