--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
 <body>
     <header>
         <nav>
-            <h1 class="logo">Ace1.</h1>
+            <h1 class="logo">Ace1.
+                <select name="version" id="version">
+                    <option value="#" selected><a href="https://ace7260.github.io">v1</a></option>
+                    <option value="https://ace7260.github.io/vigilant-broccoli/"><a href="https://ace7260.github.io/vigilant-broccoli/" target="_blank">v2</a></option>
+                  </select> 
+            </h1>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#About">About</a></li>
@@ -242,21 +247,6 @@
             </script> Ace1 All Rights Reserved</p>
     </footer>
     <script src="/js/script.js"></script>
-</body>
-
-</html>
-</div>
-
-</section>
-
-<footer>
-
-    <p>Copyright &copy;
-        <script>
-            document.write(new Date().getFullYear())
-        </script> Ace1 All Rights Reserved</p>
-</footer>
-<script src="/js/script.js"></script>
 </body>
 
 </html>
